update packages, add watcher for .json files, update demo data

--- a/generators/app/templates/src/pages/templates/_menu.html
+++ b/generators/app/templates/src/pages/templates/_menu.html
@@ -1,11 +1,11 @@
 {% set
   items = [
     {
-      title : 'Главная',
+      title : 'Main page',
       url: 'main-page.html'
     },
     {
-      title: 'Новости',
+      title: 'News',
       url: 'news.html'
     }
   ]
