--- a/generators/app/templates/src/pages/ui-kit.html
+++ b/generators/app/templates/src/pages/ui-kit.html
@@ -7,31 +7,27 @@
 
     <div class="ui-block">
       <h4 class="ui-title">&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;</h4>
-      <h1>Пример написания заголовка h1</h1>
-      <h2>Пример написания заголовка h2</h2>
-      <h3>Пример написания заголовка h3</h3>
-      <h4>Пример написания заголовка h4</h4>
-      <h5>Пример написания заголовка h5</h5>
-      <h6>Пример написания заголовка h6</h6>
+      <h1>Heading h1</h1>
+      <h2>Heading h2</h2>
+      <h3>Heading h3</h3>
+      <h4>Heading h4</h4>
+      <h5>Heading h5</h5>
+      <h6>Heading h6</h6>
     </div>
     <div class="ui-block">
       <h4 class="ui-title">&lt;p&gt;</h4>
-      <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными
-        чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал
-        он. Это не было сном.</p>
-      <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными
-        чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал
-        он. Это не было сном.</p>
+      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden</p>
+      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden</p>
     </div>
     <div class="ui-block">
       <h4 class="ui-title">&lt;small&gt;</h4>
-      <div class="ui-desc">Пример использования тега small внутри параграфа</div>
-      <p>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое.<small>Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот</small>        , на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал он. Это не было
-        сном.
-      </p>
+      <div class="ui-desc">Example small tag</div>
+      <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden 
+      <small>small tag small tag small tag small tag</small>
+      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden</p>
     </div>
     <div class="ui-block">
-      <h4 class="ui-title">Пример работы <small>тега small</small> внутри тега h4</h4>
+      <h4 class="ui-title">Example <small>small tag</small> in heading h4</h4>
     </div>
     <div class="ui-block">
       <h4 class="ui-title">&lt;a href=&quot;#&quot;&gt;</h4>
@@ -74,9 +70,9 @@
     <div class="ui-block">
       <h4 class="ui-title">&lt;dl&gt;&lt;dt&gt;&lt;dd&gt;</h4>
       <dl>
-        <dt>Процессор</dt>
+        <dt>Processor</dt>
         <dd>Intel Core</dd>
-        <dt>Видеокарта</dt>
+        <dt>Graphic card</dt>
         <dd>GeForce</dd>
       </dl>
     </div>
@@ -88,8 +84,8 @@
       <blockquote>Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными
         чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал
         он.
-        <footer>Франц Кафка
-          <cite>Источник</cite>
+        <footer>Author name
+          <cite>Origin</cite>
         </footer>
       </blockquote>
     </div>
@@ -154,7 +150,7 @@
     </div>
 
     <div class="ui-block">
-      <div class="ui-title">Кнопки</div>
+      <div class="ui-title">Buttons</div>
       <button type="button">Normal button</button>
       <button type="button" disabled>Disabled button</button>
       <input type="submit" value="Submit button">
@@ -163,15 +159,15 @@
     </div>
 
     <div class="ui-block">
-      <h4 class="ui-title">Таблица</h4>
+      <h4 class="ui-title">Table</h4>
       <table border="1">
-        <caption>Таблица 1.1. Заголовок таблицы через тег Caption</caption>
+        <caption>Table 1.1. Title Caption</caption>
         <thead>
           <tr>
             <th>№</th>
-            <th>Заголовок One</th>
-            <th>Заголовок Two</th>
-            <th>Заголовок Three</th>
+            <th>Title One</th>
+            <th>Title Two</th>
+            <th>Title Three</th>
           </tr>
         </thead>
         <tbody>
@@ -208,7 +204,7 @@
     </div>
 
     <div class="ui-block">
-      <div class="ui-title">Форма</div>
+      <div class="ui-title">Form</div>
       <form id="form_1" method="post" action="">
         <div class="ui-form-group">
           <label>Text</label>
@@ -313,55 +309,55 @@
         <div class="ui-form-group">
           <label for="">Checkbox</label><br>
           <label for="ch-0">
-            <input type="checkbox" id="ch-0" name="checkbox_group"> Название чекбокса 1
+            <input type="checkbox" id="ch-0" name="checkbox_group"> this is a checkbox 1
           </label>
           <label for="ch-1">
-            <input type="checkbox" id="ch-1" name="checkbox_group"> Название чекбокса 2
+            <input type="checkbox" id="ch-1" name="checkbox_group"> this is a checkbox 2
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Checkbox checked</label><br>
           <label for="ch-2">
-            <input type="checkbox" id="ch-2" checked="checked"> Чекбокс отмеченный
+            <input type="checkbox" id="ch-2" checked="checked"> this is a checkbox
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Checkbox disabled</label><br>
           <label for="ch-3">
-            <input type="checkbox" id="ch-3" disabled=""> Чекбокс отключенный
+            <input type="checkbox" id="ch-3" disabled=""> this is a checkbox
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Checkbox checked disabled</label><br>
           <label for="ch-4">
-            <input type="checkbox" id="ch-4" disabled="" checked=""> Чекбокс отключенный и выбранный
+            <input type="checkbox" id="ch-4" disabled="" checked=""> this is a checkbox
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Radio Inline</label><br>
           <label for="r-1">
-            <input type="radio" id="r-1" name="radio_group"> Название radio элемента 1
+            <input type="radio" id="r-1" name="radio_group"> this is a radio 1
           </label>
           <label for="r-2">
-            <input type="radio" id="r-2" name="radio_group"> Название radio элемента 2
+            <input type="radio" id="r-2" name="radio_group"> this is a radio 2
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Radio checked</label><br>
           <label for="r-3">
-            <input type="radio" id="r-3" name="radio2" checked=""> Название radio элемента
+            <input type="radio" id="r-3" name="radio2" checked=""> this is a radio
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Radio disabled</label><br>
           <label for="r-4">
-            <input type="radio" id="r-4" name="radio3" disabled=""> Название radio элемента
+            <input type="radio" id="r-4" name="radio3" disabled=""> this is a radio
           </label>
         </div>
         <div class="ui-form-group">
           <label for="">Radio disabled checked</label><br>
           <label for="r-5">
-            <input type="radio" id="r-5" name="radio4" disabled="" checked=""> Название radio элемента
+            <input type="radio" id="r-5" name="radio4" disabled="" checked=""> this is a radio
           </label>
         </div>
       </form>
@@ -369,8 +365,8 @@
     </div>
 
     <div class="ui-block">
-      <h4 class="ui-title">Дополнительно</h4>
-      <h5>Класс .rouble</h5>
+      <h4 class="ui-title">Additional</h4>
+      <h5>css class .rouble</h5>
       <h2 class="rouble">abcdefghijklmnopqrstuvw</h2>
     </div>
 
