--- a/generators/app/templates/src/scss/1-tools/mixins/_font-face.scss
+++ b/generators/app/templates/src/scss/1-tools/mixins/_font-face.scss
@@ -1,20 +1,10 @@
-@mixin font-face($family, $file-path, $weight: normal, $style: normal, $asset-pipeline: false){
+@mixin font-face($family, $file-path, $weight: normal, $style: normal){
   @font-face{
     font-family: '#{$family}';
     font-weight: $weight;
     font-style: $style;
     font-display:swap;
-
-    @if ($asset-pipeline == true){
-      src: font-url('#{$file-path}.eot');
-      src: font-url('#{$file-path}.eot?#iefix') format('embedded-opentype'), font-url('#{$file-path}.woff');
-    }
-    @else{
-      src: url('#{$file-path}.eot');
-      src: url('#{$file-path}.eot?#iefix') format('embedded-opentype'),
-          url('#{$file-path}.woff') format('woff'),
-          url('#{$file-path}.ttf') format('truetype'),
-          url('#{$file-path}.svg') format('svg');
-    }
+    src: url('#{$file-path}.woff2') format('woff2'),
+        url('#{$file-path}.woff') format('woff');
   }
 }
